# mote-libase

./: CMakeLists.txt  README.md  base.h  helper.h  mock.c  mock.h
abuff/: CMakeLists.txt  README.cn.md  abuff.h  helper.c  init.c  internal.h  resize.c  string.c
abuff/examples/: CMakeLists.txt  abuff.c
abuff/tests/: CMakeLists.txt  init.c  misc.c  platform.c  resize.c  string.c
